--- a/UD4-Sesion-05/src/app/app.component.html
+++ b/UD4-Sesion-05/src/app/app.component.html
@@ -15,8 +15,7 @@
 
 <body>
 
-    <app-navbar></app-navbar>
-    <app-content></app-content>
+  <app-calculadora> </app-calculadora>
 </body>
 
 </html>
